--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "npx hardhat run ./scripts/run.ts",
     "accounts": "npx hardhat accounts",
     "build": "npx hardhat compile",
+    "node": "npx hardhat node",
+    "deploy": "npx hardhat run ./scripts/deploy.ts --network localhost",
     "test": "npx hardhat test"
   },
   "keywords": [],
