--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx hardhat run ./scripts/run.ts",
-    "ui": "cd ui && npm start",
+    "dev": "cd ui && npm run dev",
     "accounts": "npx hardhat accounts",
     "build": "npx hardhat compile",
     "node": "npx hardhat node",
