--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "start": "npx hardhat run ./scripts/run.ts",
     "test": "npx hardhat test",
     "dev": "cd ui && npm run dev",
+    "ui:build": "cd ui && npm run build" ,
     "accounts": "npx hardhat accounts",
     "build": "npx hardhat compile",
     "node": "npx hardhat node",
     "deploy-localhost": "npx hardhat run ./scripts/deploy.ts --network localhost",
     "deploy-staging": "npx hardhat run ./scripts/deploy.ts --network goerli",
     "deploy-prod": "npx hardhat run ./scripts/deploy.ts --network mainnet",
-    "test": "npx hardhat test"
   },
   "keywords": [],
   "author": "",
